--- a/repo/404.html
+++ b/repo/404.html
@@ -41,6 +41,8 @@
                 <p>Patch iCleaner Pro</p>
             </a><a href="depiction/web/com.oneopc.cercubecrack.html" style="background-image: url(assets/com.oneopc.cercubecrack/banner.png)" class="card">
                 <p>Cercube Remove Ads</p>
+            </a><a href="depiction/web/com.oneopc.clearbadges.html" style="background-image: url(assets/com.oneopc.clearbadges/banner.png)" class="card">
+                <p>ClearBadges</p>
             </a><a href="depiction/web/com.oneopc.deleteforever.html" style="background-image: url(assets/com.oneopc.deleteforever/banner.png)" class="card">
                 <p>DeleteForever</p>
             </a><a href="depiction/web/com.oneopc.LocalIAPStore.html" style="background-image: url(assets/com.oneopc.LocalIAPStore/banner.png)" class="card">
@@ -155,6 +157,15 @@
                         </div>
                     </div>
                 </a>
+                <a class="subtle_link" href="depiction/web/com.oneopc.clearbadges.html">
+                    <div class="package">
+                        <img src="assets/com.oneopc.clearbadges/icon.png">
+                        <div class="package_info">
+                            <p class="package_name">ClearBadges</p>
+                            <p class="package_caption">oneopc</p>
+                        </div>
+                    </div>
+                </a>
                 <a class="subtle_link" href="depiction/web/com.oneopc.deleteforever.html">
                     <div class="package">
                         <img src="assets/com.oneopc.deleteforever/icon.png">
@@ -246,7 +257,7 @@
                     </div>
                 </a>
         </div>
-        <div class="caption center footer">Oneopc ©1.1.0 – Updated 2019-10-09</div>
+        <div class="caption center footer">Oneopc ©1.1.0 – Updated 2019-10-23</div>
     </div>
 
 </body>
