Repo contents updated Silica v1.1.0

--- a/repo/depiction/web/com.oneopc.cracktool4.html
+++ b/repo/depiction/web/com.oneopc.cracktool4.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="cell">
                     <div class="title">Version</div>
-                    <div class="text">4.0~beta9a</div>
+                    <div class="text">4.0~beta9c</div>
                     <br><br>
                 </div>
                 <div class="cell">
@@ -64,12 +64,12 @@
         </div>
         <div class="changelog">
             <div class="changelog_entry">
-                <h4>4.0~beta9a</h4>
+                <h4>4.0~beta9c</h4>
                 <div class="md_view"><p>Support arm64e.</p>
 </div>
             </div>
         </div>
-        <div class="caption center footer">Oneopc ©1.1.0 – Updated 2019-10-23</div>
+        <div class="caption center footer">Oneopc ©1.1.0 – Updated 2020-02-05</div>
     </div>
 </body>
 <script>compatible("12.0","12.4","iOS 12.0 to 12.4");externalize()</script>
